--- a/.github/ISSUE_TEMPLATE/new_technology.yml
+++ b/.github/ISSUE_TEMPLATE/new_technology.yml
@@ -1,5 +1,5 @@
-name: New Technology Request
-description: Request to add a new technology
+name: New Technology Proposal
+description: Propose a new technology
 title: "Add technology ..."
 labels: ["documentation", "new-technology"]
 
